Fix card spacing

--- a/src/games/Uno/components/CardWheel.scss
+++ b/src/games/Uno/components/CardWheel.scss
@@ -17,7 +17,7 @@
     min-width: 40px;
     transition: transform .3s;
     z-index: 0;
-    margin: 2px;
+    margin: 0 2px;
 
     // &:hover {
     //   transform: translateY(-30%);
